# Xuanxi-Smartband

./: README.md
docs/: algorithm.md  architecture.md  faq.md  getting-started.md  jade-tablet.md  protocol.md
firmware/: BUILD.gn  config.json
firmware/algorithms/: spirit_calculator.c
firmware/drivers/: max30102.c
firmware/include/: max30102.h  spirit_calculator.h
firmware/main/: app_main.c
